Add color for remove circle button

--- a/dronezone/index.html
+++ b/dronezone/index.html
@@ -22,6 +22,7 @@
     <script type="module" src="/src/main.jsx"></script>
 
     <div id="map"></div>
+    <button type="button", onclick="onButtonClick()", id="buttonColor">remove circle</button>
 
   </body>
 </html>
