Add forbidden zones

--- a/dronezone/index.html
+++ b/dronezone/index.html
@@ -23,6 +23,7 @@
 
     <div id="map"></div>
     <button type="button", onclick="onButtonClick()", id="buttonColor">remove circle</button>
+    <button type="button", onclick="onForbiddenClick()", id="forbiddenButton">draw forbidden zone</button>
 
   </body>
 </html>
